# notexbook-jupyter-theme

./: .bumpversion.cfg  .gitignore  LICENSE  MANIFEST.in  README.md  TeXbook_Theme_Sample.ipynb  custom.css  dataframe.css  editors.css  google_colab_stylus_chrome.css  google_colab_stylus_mozilla.css  google_colab_stylus_theme.json  pyproject.toml  setup.cfg  setup.py
custom/: custom.css  custom.js  dataframe.css  editors.css  html_export.css  html_export_jupyter_light.css  jupyter_light.css
custom-css/: setup.md
custom-css/custom/: custom.css  custom.js  dataframe.css  editors.css  jupyter_light.css
custom-css/custom/themes/: code_crisp_theme.css  md_typora_theme.css
custom/themes/: code_crisp_theme.css  code_github2_theme.css  code_github_light_theme.css  code_github_theme.css  code_material_theme.css  md_material_theme.css  md_typora_theme.css
docs/: TeXbook.tpl  TeXbook_Theme_Sample.ipynb  TexBook_Theme_Sample_Classic.html  TexBook_Theme_Sample_default.html  custom.js  dataframe.css  editors.css  fonts.css  index.html  jupyter_lab_export.html  noTeXbook_Theme_Sample.ipynb
docs/example/: TeXbook_Theme_Sample.ipynb  TexBook_Theme_Sample_Classic.html  TexBook_Theme_Sample_default.html
docs/themes/: code_material_theme.css
example/: TeXbook_Theme_Sample.ipynb
ipython-magic/: .bumpversion.cfg  pyproject.toml  setup.cfg  setup.md
ipython-magic/notexbook/resources/: dataframe_css.jinja2  editors_css.jinja2  noTeXbook_theme_css.jinja2
ipython-magic/texbook_theme/: __init__.py
ipython-magic/texbook_theme/resources/: dataframe_css.jinja2  editors_css.jinja2  fonts_css.jinja2  texbook_theme_css.jinja2
notexbook/: __init__.py  magic.py  settings.py
notexbook-colab/: google_colab_stylus_chrome.css  google_colab_stylus_mozilla.css  google_colab_stylus_theme.json  setup.md
notexbook-magic/: MANIFEST.in  pyproject.toml  setup.cfg  setup.py
notexbook-magic/notexbook/: __init__.py  magic.py  settings.py
notexbook-magic/notexbook/resources/: fonts_css.jinja2  jupyter_light_css.jinja2  noTeXbook_theme_css.jinja2
notexbook-magic/notexbook/templates/: noTeXbook_theme.html
notexbook/resources/: dataframe_css.jinja2  editors.css  editors_css.jinja2  editors_template.jinja2  html_export_css.jinja2  html_export_jupyter_light.css  jupyter_light.css  jupyter_light_css.jinja2  noTeXbook_theme_css.jinja2  noTeXbook_theme_template.jinja2  notebook.css
notexbook/resources/themes/: code_crisp_theme.css  code_github2_theme.css  code_github_light_theme.css  code_github_theme.css  (+3 more)
notexbook/templates/: noTeXbook_theme.html
texbook/: __init__.py  nbserver_resource_handler.py  settings.py  texbook_magic.py
texbook-colab/: google_colab_stylus_mozilla.css
texbook/resources/: dataframe_css.jinja2  editors_css.jinja2  fonts_css_loca_html.jinja2  texbook_theme_css.jinja2
texbook/templates/: texbook_theme.html
texbook_theme/: __init__.py  magic.py  nbserver_resource_handler.py  settings.py  texbook_magic.py
texbook_theme/resources/: dataframe_css.jinja2  editors_css.jinja2  fonts_css.jinja2  texbook_theme_css.jinja2
texbook_theme/templates/: texbook_theme.html
themes/: code_crisp_theme.css  code_github_theme.css  code_material_theme.css  md_material_theme.css  md_typora_theme.css
(+11 files in other folders)
