[project]
name = "texbook_theme"
version = "0.1.0"
author = "Valerio Maggio"
author-email = "valeriomaggio@gmail.com"
home-page = "http://github.com/leriomaggio/texbook-jupyter-theme"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 5 - Production/Stable",
    "Framework :: IPython",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]

[build-system]
#requires = ["flit_core >=2,<4", "notebook"]
#build-backend = "flit_core.buildapi"
requires = ["setuptools", "notebook"]
build-backend = "setuptools.build_meta"

# Requirements
[dependecies]
ipython = "^7.0"
jupyter = "^6.0"
notebook = "^6.0"
tornado = "^5.0"
jinja2 = "^2.10"


[tool.black]
line-length = 88
target_version = ['py36']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

