[metadata]
version = 1.1.1
license_file = LICENSE
classifiers = 
	License :: OSI Approved :: Apache Software License
	Development Status :: 5 - Production/Stable
	Framework :: IPython
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
